--- a/sakura/src/main/resources/static/css/login.css
+++ b/sakura/src/main/resources/static/css/login.css
@@ -1,7 +1,7 @@
 body
 {
 		margin: auto 0;
-		background-image: url(../image/timg.jpg);		
+		background-image: url(static/image/timg.jpg);
 		background-repeat: no-repeat;
 		
 }
