--- a/sakura/src/main/resources/templates/index.html
+++ b/sakura/src/main/resources/templates/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Sakura</title>
+    <link href="../static/css/login.css" rel="stylesheet" type="text/css">
+    <script src="../static/js/init.js" ></script>
 </head>
 <body>
-    <p th:text="${hello}"></p>
 </body>
 </html>
 
