--- a/sakura/src/main/resources/static/css/login.css
+++ b/sakura/src/main/resources/static/css/login.css
@@ -1,6 +1,27 @@
+html,body{
+    width: 100%;
+    height: 100%;
+}
 body {
-	margin: auto 0;
-	padding: 0;
-	background-image: url("../image/timg.jpg");
+    margin: auto 0;
+    padding: 0;
+    background-image: url("../image/login.jpg");
     background-repeat: no-repeat;
+    background-size: cover;
+}
+.loginBox{
+    width: 30%;
+    height: 38%;
+    background-color: white;
+    position: absolute;
+    left: 50%;
+    top: 27%;
+}
+.loginTittle{
+    text-align: center;
+    line-height: 4rem;
+    height: 17%;
+    background-color: goldenrod;
+    font-family: Consolas;
+    font-size: 173%;
 }
