--- a/sakura/src/main/resources/templates/index.html
+++ b/sakura/src/main/resources/templates/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <title>Sakura</title>
     <link href="../static/css/login.css" rel="stylesheet" type="text/css">
+    <script src="../static/js/jquery-1.12.4.js" ></script>
+    <script src="../static/js/bootstrap.min.js" ></script>
     <script src="../static/js/init.js" ></script>
 </head>
 <body>
+    <div class="loginBox">
+        <div class="loginTittle">Smart Login</div>
+    </div>
 </body>
 </html>
 
