--- a/sakura/src/main/resources/templates/index.html
+++ b/sakura/src/main/resources/templates/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sakura</title>
     <link href="../static/css/login.css" rel="stylesheet" type="text/css">
     <script src="../static/js/jquery-1.12.4.js" ></script>
