--- a/sakura/src/main/resources/templates/index.html
+++ b/sakura/src/main/resources/templates/index.html
@@ -1,19 +1,63 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sakura</title>
-    <link href="../static/css/login.css" rel="stylesheet" type="text/css">
-    <script src="../static/js/jquery-1.12.4.js" ></script>
-    <script src="../static/js/bootstrap.min.js" ></script>
-    <script src="../static/js/init.js" ></script>
-</head>
-<body>
-    <div class="loginBox">
-        <div class="loginTittle">Smart Login</div>
-    </div>
-</body>
-</html>
 
+    <title>Sakura</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">  <!-- Google web font "Open Sans" -->
+    <link rel="stylesheet" href="../static/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="../static/css/demo.css" />
+    <link rel="stylesheet" href="../static/css/templatemo-style.css">
+
+    <script type="text/javascript" src="../static/js/modernizr.custom.86080.js"></script>
+
+</head>
+
+<body>
+
+<div id="particles-js"></div>
+
+<ul class="cb-slideshow">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ul>
+
+<div class="container-fluid">
+    <div class="row cb-slideshow-text-container ">
+        <div class= "tm-content col-xl-6 col-sm-8 col-xs-8 ml-auto section">
+            <header class="mb-5"><h1>Smart</h1></header>
+            <P class="mb-5">This is a very long and good life.</P>
+
+            <form action="#" method="get" class="subscribe-form">
+                <div class="row form-section">
+
+                    <div class="col-md-7 col-sm-7 col-xs-7">
+                        <input name="email" type="text" class="form-control" id="contact_email" placeholder="Your UserName..." required/>
+                    </div>
+
+                    <div class="col-md-5 col-sm-5 col-xs-5">
+                        <button type="submit" class="tm-btn-subscribe">Subscribe</button>
+                    </div>
+
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="footer-link">
+        <p>Copyright © 2018 Sakura
+            - Design: <a rel="nofollow" href="#" target="_parent">Lucas</a></p>
+    </div>
+</div>
+</body>
+
+<script type="text/javascript" src="../static/js/particles.js"></script>
+<script type="text/javascript" src="../static/js/app.js"></script>
+</html>
