--- a/sakura/src/main/resources/templates/index.html
+++ b/sakura/src/main/resources/templates/index.html
@@ -36,11 +36,15 @@
             <header class="mb-5"><h1>Smart</h1></header>
             <P class="mb-5">This is a very long and good life.</P>
 
-            <form action="#" method="get" class="subscribe-form">
+            <form action="/sakura/login.action" method="get" class="subscribe-form">
                 <div class="row form-section">
 
                     <div class="col-md-7 col-sm-7 col-xs-7">
-                        <input name="email" type="text" class="form-control" id="contact_email" placeholder="Your UserName..." required/>
+                        <input name="userName" type="text" class="form-control" id="contact_email" placeholder="Your UserName..." required/>
+                    </div>
+
+                    <div class="col-md-7 col-sm-7 col-xs-7">
+                        <input name="passWord" type="text" class="form-control" id="contact_email1" placeholder="Your password..." required/>
                     </div>
 
                     <div class="col-md-5 col-sm-5 col-xs-5">
