--- a/sakura/src/main/resources/templates/index.html
+++ b/sakura/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
             <header class="mb-5"><h1>Smart</h1></header>
             <P class="mb-5">This is a very long and good life.</P>
 
-            <form action="/sakura/login.action" method="get" class="subscribe-form">
+            <form action="/sakura/login.action" method="post" class="subscribe-form">
                 <div class="row form-section">
 
                     <div class="col-md-7 col-sm-7 col-xs-7">
